Enable sending and receiving json instead of document